# chess-insights

./: .gitignore  CLAUDE.md  CLAUDE_HANDOFF.md  COMMANDS.md  README.md  _quarto.yml  about.qmd  accuracy.qmd  config.yaml  index.qmd  mcp_server.py  openings.qmd  phases.qmd  styles.css  time-management.qmd
R/: functions.R
R/scripts/: 00_setup.R  01_data_loading.R  02_accuracy_analysis.R  06_visualizations.R
docs/: about.html  accuracy.html  index.html  openings.html  phases.html  search.json  styles.css  time-management.html
docs/site_libs/bootstrap/: bootstrap-f7415341d87a957c03202124dd040634.min.css
python/: pyproject.toml  requirements.txt
python/chess_insights/: __main__.py  cli.py  config.py
python/chess_insights/analysis/: game_phase.py  stockfish.py
python/chess_insights/api/: base.py  chesscom.py  lichess.py
python/chess_insights/commands/: analyze.py  fetch.py
python/chess_insights/database/: operations.py  schema.py
python/chess_insights/parsing/: clock_parser.py  pgn_parser.py
scripts/: backfill_best_move_san.py  backfill_fen.py  backfill_utils.py  daily_sync.sh
web/: app.py
web/static/css/: style.css
web/static/js/: puzzle.js
web/templates/: index.html
